log metrics
